# GRT

./: pyproject.toml
configs/: base.yaml
configs/ablation/: mean_pool_router.yaml  no_register_dropout.yaml  write_bias_0.yaml  zero_s0.yaml
configs/experiment/: pg19_lm.yaml  toy_arithmetic.yaml  toy_entity.yaml  toy_passkey.yaml
documents/: EXPERIMENT1.md  RUN_TESTS.md  proposal.md  spec_260608.md
scripts/: evaluate.py  run_rtla.py  sanity_check.py  train.py
src/grt/: __init__.py  config.py
src/grt/logging/: __init__.py  rtla_uploader.py  wandb_logger.py
src/grt/model/: __init__.py  alu.py  grt.py  router.py  writeback.py
src/grt/rtla/: __init__.py  analyzer.py  plots.py
src/grt/training/: __init__.py  data.py  metrics.py  trainer.py
