[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grt"
version = "0.1.0"
description = "Gated Register Transformer phase 1 implementation"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2.0",
    "pyyaml>=6.0",
    "einops>=0.7.0",
    "wandb>=0.17",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
